--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -149,13 +149,25 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.5.RELEASE</version>
+                <version>${spring.boot.version}</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>repackage</goal>
                         </goals>
                     </execution>
+			        <execution>
+			          <id>pre-integration-test</id>
+			          <goals>
+			            <goal>start</goal>
+			          </goals>
+			        </execution>
+			        <execution>
+			          <id>post-integration-test</id>
+			          <goals>
+			            <goal>stop</goal>
+			          </goals>
+			        </execution>
                 </executions>
             </plugin>
         </plugins>
