--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -131,16 +131,16 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-log4j12</artifactId>-->
-<!--            <version>${slf4j.version}</version>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-        </dependency>
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-log4j12</artifactId>
+           <version>${slf4j.version}</version>
+       </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.projectlombok</groupId> -->
+<!--             <artifactId>lombok</artifactId> -->
+<!--             <version>${lombok.version}</version> -->
+<!--         </dependency> -->
     </dependencies>
 
     <build>
