--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -26,13 +26,7 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<repositories>
-		<repository>
-			<id>data-local</id>
-			<name>data</name>
-			<url>file://${project.basedir}/libs</url>
-		</repository>
-	</repositories>
+
 
 	<developers>
 		<developer>
@@ -47,7 +41,6 @@
 			<url>http://www.gnu.org/licenses/gpl.txt</url>
 		</license>
 	</licenses>
-
 
 	<properties>
 		<junit.version>4.11</junit.version>
@@ -92,6 +85,15 @@
 			build when using @{argLine} (see **HERE-ARG-LINE**) -->
 		<argLine></argLine>
 	</properties>
+
+	<!-- TODO: move repo location to test libs -->
+	<repositories>
+		<repository>
+			<id>data-local</id>
+			<name>data</name>
+			<url>file://${project.basedir}/libs</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -160,6 +162,12 @@
 			<version>1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.biojava</groupId>
+			<artifactId>biojava-structure</artifactId>
+			<version>5.4.0</version>
+		</dependency>
+
 		<!-- This dependency is only required by some test from biojava -->
 		<dependency>
 			<groupId>xmlunit</groupId>
@@ -169,22 +177,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.biojava</groupId>
-			<artifactId>biojava-structure</artifactId>
-			<version>5.4.0</version>
-		</dependency>
-
-		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.54</version>
 		</dependency>
 
-		<!-- custom jvmserializers jar -->
+		<!-- custom jvm-serializer-FastJSONBenchmarkOnly jar -->
 		<dependency>
 			<groupId>com.local</groupId>
-			<artifactId>jvm-serializers</artifactId>
-			<version>1.0</version>
+			<artifactId>jvmserializers</artifactId>
+			<version>2.0</version>
 		</dependency>
 
 		<dependency>
@@ -222,6 +224,9 @@
 					</execution>
 				</executions>
 			</plugin>
+
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
