Added some dependencies required by fastjson tests

--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -174,9 +174,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.io</artifactId>
+			<version>${apache-commons-io.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.54</version>
+			<version>1.2.73</version>
 		</dependency>
 
 		<!-- custom jvm-serializer-FastJSONBenchmarkOnly jar -->
@@ -186,10 +193,32 @@
 			<version>1.2</version>
 		</dependency>
 
+		<!-- These dependencies are only required by some test from fastjson -->
 		<dependency>
-			<groupId>org.apache.directory.studio</groupId>
-			<artifactId>org.apache.commons.io</artifactId>
-			<version>${apache-commons-io.version}</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.clojure</groupId>
+			<artifactId>clojure</artifactId>
+			<version>1.5.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
 			<scope>test</scope>
 		</dependency>
 
