--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -183,7 +183,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.73</version>
+			<version>1.2.54</version>
 		</dependency>
 
 		<!-- custom jvm-serializer-FastJSONBenchmarkOnly jar -->
@@ -199,6 +199,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.4</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.9</version>
 		</dependency>
 
 		<dependency>
