--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -31,6 +31,10 @@
 			<id>gulyx</id>
 			<name>Guglielmo De Angelis</name>
 		</developer>
+		<developer>
+			<id>MorenaBarboni</id>
+			<name>Morena Barboni</name>
+		</developer>
 	</developers>
 
 	<licenses>
@@ -225,6 +229,13 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20180130</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.4.0</version>
 			<scope>test</scope>
 		</dependency>
 
