--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -187,7 +187,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.54</version>
+			<version>1.2.75</version>
 		</dependency>
 
 		<!-- custom jvm-serializer-FastJSONBenchmarkOnly jar -->
@@ -426,7 +426,7 @@
 		</profile>
 
 		<profile>
-			<id>fastjsonExperimentsProfile</id>
+			<id>inLabTestProfile</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
@@ -454,24 +454,9 @@
 									<goal>verify</goal>
 								</goals>
 								<configuration>
-									<test>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.fastjson.FastjsonDriver_IT</test>
+									<test>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.fastjson.LabDriver_IT</test>
 									<reuseForks>false</reuseForks>
 									<useUnlimitedThreads>true</useUnlimitedThreads>
-									<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>
-									<argLine>
-										-Xmx4G
-										-agentpath:${groucho-crochet.build.directory}/libtagging.so
-										-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
-										-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
-										 @{argLine}
-										-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
-										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
-										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfFlakinessExperiments.properties
-										<!-- -->
-										-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
-										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
-										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfFlakinessExperiments.properties
-									</argLine>
 								</configuration>
 							</execution>
 						</executions>
