Restored Fix Issue #17 on all the instances

--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -178,7 +178,7 @@
 <!-- 								<argument>-b${basedir}/target/xxhash</argument> -->
 <!-- 								<argument>- -prefix=${jep-inst-path}</argument> -->
 <!-- About the next line please consider ISSUE#17  on GitHub at: https://github.com/IASI-SAKS/groucho/issues/17-->
- 								<argument>--system</argument>
+<!-- 	                        <argument>-REMOVE_THIS_SPACE-system</argument> -->                                
 								<argument>-b${xxhash-path}</argument>
 								<argument>-t${jep-inst-path}</argument>
 								<argument>xxhash</argument>
