--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -49,6 +49,7 @@
         <project.build.sourceEncoding>${character.encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${character.encoding}</project.reporting.outputEncoding>
         <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+<!--	<maven-surefire.version>3.0.0-M4</maven-surefire.version> -->
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <lsh-invivo.version>1.0-SNAPSHOT</lsh-invivo.version>
         <slf4j.version>1.7.12</slf4j.version>
@@ -56,6 +57,8 @@
         <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
         <junit.version>4.4</junit.version>
         <lombok.version>1.18.20</lombok.version>
+	<lsh-invivo.directory>${basedir}/../lsh-invivo</lsh-invivo.directory>
+	<jep-inst-path>${lsh-invivo.directory}/target/jep-inst</jep-inst-path>
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
@@ -150,6 +153,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version>
+				<configuration>
+					<environmentVariables>
+						<PYTHONPATH>${jep-inst-path}/:$PYTHONPATH</PYTHONPATH>
+					</environmentVariables>
+					<systemPropertyVariables>
+						<propertyName>java.library.path</propertyName>
+					</systemPropertyVariables>
+<!-- 					This is the place-holder **HERE-ARG-LINE** -->
+<!--					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/ -->
+					<argLine>-Djava.library.path=${jep-inst-path}/jep/
+					</argLine>
+				</configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -170,6 +185,32 @@
 			        </execution>
                 </executions>
             </plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+<!--				<version>${maven-surefire.version}</version> -->
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<environmentVariables>
+						<PYTHONPATH>${jep-inst-path}/:$PYTHONPATH</PYTHONPATH>
+					</environmentVariables>
+					<systemPropertyVariables>
+						<propertyName>java.library.path</propertyName>
+					</systemPropertyVariables>
+<!-- 					This is the place-holder **HERE-ARG-LINE** -->
+<!--					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/ -->
+					<argLine>-Djava.library.path=${jep-inst-path}/jep/
+					</argLine>
+				</configuration>
+			</plugin>
+
         </plugins>
     </build>
 </project>
