--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -57,9 +57,15 @@
         <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
         <junit.version>4.4</junit.version>
         <lombok.version>1.18.20</lombok.version>
+		
 		<lsh-invivo.directory>${basedir}/../lsh-invivo</lsh-invivo.directory>
 		<jep-inst-path>${lsh-invivo.directory}/target/jep-inst</jep-inst-path>
+		
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+		
+		<!-- argLine must be defined, otherwise both Surfire and Failsafe will broke the
+			build when using @{argLine} (see **HERE-ARG-LINE**) -->
+		<argLine></argLine>
     </properties>
 
     <dependencyManagement>
@@ -75,6 +81,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>it.cnr.iasi.saks.groucho</groupId>
+            <artifactId>lsh-invivo</artifactId>
+            <version>${lsh-invivo.version}</version>
+        </dependency>
+    
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -124,11 +136,6 @@
             <version>2.0.1.Final</version>
         </dependency>
         <dependency>
-            <groupId>it.cnr.iasi.saks.groucho</groupId>
-            <artifactId>lsh-invivo</artifactId>
-            <version>${lsh-invivo.version}</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -149,6 +156,7 @@
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -174,6 +182,7 @@
                             <goal>repackage</goal>
                         </goals>
                     </execution>
+<!-- -->
 			        <execution>
 			          <id>pre-integration-test</id>
 			          <goals>
@@ -186,6 +195,7 @@
 			            <goal>stop</goal>
 			          </goals>
 			        </execution>
+<!-- -->
                 </executions>
             </plugin>
 
@@ -211,6 +221,36 @@
 <!--					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/ -->
 					<argLine>-Djava.library.path=${jep-inst-path}/jep/
 					</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
+				<!-- <version>2.18.1</version> -->
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+					</excludes>
+					<reuseForks>false</reuseForks>
+				<!-- INTEGRATION TESTS IN THIS MODULE SHOULD NOT REQUIRE THE INSTRUMENTED JVM BUILD WITH GROUCHO</version> -->
+				<!-- THUS, DIFFENTLY FROM THE CONFIGURATIONS INHERITED FROM THE FILE: -->
+				<!-- * ../pom.xml -->
+				<!-- THIS CONFIGURATION OF FAILSAFE BINDS TO THE JAVA_HOME SET IN THE ENVIRONMENT -->
+					<jvm>${env.JAVA_HOME}/jre/bin/java</jvm>
+					<argLine>
+					-Xmx4G					
+					</argLine>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
 				</configuration>
 			</plugin>
 
